--- a/assets/main.css
+++ b/assets/main.css
@@ -35,11 +35,16 @@ body {
   margin: 0 auto;
   color: var(--c-text);
   background-color: var(--c-background);
-  width: 80ch;
+  max-width: 85ch;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   line-height: 1.2;
+}
+
+main {
+  max-width: 80ch;
+  padding: 2.5ch;
 }
 
 div.label-nav {
